--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,36 @@
-/* You can add global styles to this file, and also import other style files */
+
+@import "@fortawesome/fontawesome-free/css/all.min.css";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+*{
+  font-family: 'Poppins', sans-serif;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+body{
+  overflow-x: hidden;
+  width: 100%;
+  padding: 0;
+}
+.show-menu{
+  //transform: translateX(0);
+  border: 1px solid transparent;
+  animation: shiftPage 0.15s linear forwards;
+}
+.hide-menu{
+  border: 1px solid transparent;
+  animation: hideMenu 0.15s linear forwards;
+  transform: translateX(-80%);
+}
+
+
+@keyframes hideMenu {
+  to{
+    transform: translateX(0);
+  }
+}
+@keyframes shiftPage {
+  to{
+    transform: translateX(-80%);
+  }
+}
